# heptagon

./: .gitignore  CHANGES  CONTRIBUTING.md  Makefile  Makefile-bin  Makefile-distrib  README_CODER.txt  _tags  clean_heptc  config  config.in  configure  configure.in  heptagon.opam  heptc  myocamlbuild.ml  todo.txt
compiler/: .merlin  .project  .projectSettings  Makefile  README_ocamlbuild_hepts.txt  TODO.txt  _tags  _tags.in  debugger_script_gen.sh  myocamlbuild.ml  myocamlbuild_config.ml  preproc.ml
compiler/global/: check_signature.ml  clocks.ml  global_compare.ml  global_mapfold.ml  global_printer.ml  ident.ml  ident.mli  idents.ml  idents.mli  initial.ml  linearity.ml  location.ml  modules.ml  name_utils.ml  names.ml  signature.ml  static.ml  types.ml
compiler/heptagon/: hept_mapfold.ml  hept_mapred.ml  hept_printer.ml  hept_utils.ml  heptagon.ml  obc_mapfold.ml
compiler/heptagon/analysis/: causal.ml  causality.ml  hept_clocking.ml  initialization.ml  interface.ml  linear_typing.ml  stateful.ml  statefull.ml  typing.ml  unsafe.ml
compiler/heptagon/ctrln/: ctrlNbacAsEpt.ml
compiler/heptagon/main/: hept_compiler.ml  hept_parser_scoper.ml  heptcheck.ml
compiler/heptagon/parsing/: _tags  hept_lexer.mll  hept_parser.mly  hept_parsetree.ml  hept_parsetree_mapfold.ml  hept_scoping.ml  hept_static_scoping.ml  lexer.mll  parsetree.ml  scoping.ml
compiler/heptagon/transformations/: automata.ml  automata_mapfold.ml  block.ml  boolean.ml  boolean.mli  completion.ml  completion_mapfold.ml  completion_mapfold2.ml  contracts.ml  every.ml  every_mapfold.ml  inline.ml  itfusion.ml  last.ml  last_mapfold.ml  normalize.ml  present.ml  present_mapfold.ml  reset.ml  reset_mapfold.ml  switch.ml
compiler/main/: ctrl2ept.ml  hept2mls.ml  heptc.ml  hepts.ml  mls2obc.ml  mls2seq.ml
compiler/minils/: _tags  minils.ml  minils_printer.ml  mls_compare.ml  mls_lexer.mll  mls_mapfold.ml  mls_parser.mly  mls_printer.ml  mls_utils.ml
compiler/minils/analysis/: _tags  clocking.ml  init.ml  interference.ml  is_memory.ml  level_clock.ml
compiler/minils/ctrl-n/: ctrlNbac.ml  ctrlNbac.mli  ctrlNbacGen.ml  ctrlNbacGen.mli
compiler/minils/ctrln/: ctrlNbacGen.ml  ctrlNbacGen.mli
compiler/minils/main/: mls2seq.ml  mls_compiler.ml  mlsc.ml
compiler/minils/parsing/: mls_lexer.mll  (+2 more)
compiler/obc/: _tags  control.ml  obc.ml  obc_compare.ml  obc_mapfold.ml  obc_printer.ml  obc_utils.ml
compiler/sequential/: obc.ml
compiler/utilities/: _tags  containers.ml  graph.ml  misc.ml  misc.mli  pp_tools.ml  pp_tools.mli  sgraph.ml
examples/: pip_from_lucyn.ept
examples/MC_inlined/: build  mc.ept  mcinlined.ept  mctypes.epi
examples/MC_memalloc/: build  mc.ept
examples/MissionComputer_for_Core/: build  dv.ept  main.c  math.ept  mathext.c  mathext.h  mc.ept  mc_ext.c  mc_ext.epi  mc_ext.h  trackslib.ept
examples/Pip/: pip_from_lucyn.ept
examples/extern_C/: README  imports.ept  mathext.c  mathext.epi  mathext.h
examples/radio_transmitter/: Makefile
global/: global.ml  ident.ml  ident.mli  initial.ml  location.ml  modules.ml  names.ml  signature.ml  static.ml  types.ml
heptagon/: _tags  heptagon.ml  printer.ml
heptagon/analysis/: automata_mem.ml  causal.ml  causality.ml  initialization.ml  interface.ml  typing.ml
heptagon/main/: compiler_utils.ml  heptcheck.ml
heptagon/parsing/: lexer.mll  parser.mly  parsetree.ml  scoping.ml
heptagon/transformations/: automata.ml  completion.ml  every.ml  last.ml  present.ml  reset.ml
lib/: Makefile  iostream.epi  pervasives.epi  time.epi
lib/c/: pervasives.h
lib/java/: .project
main/: compiler.ml  hept2mls.ml  heptc.ml  main.ml
manual/: INSTALL  heptagon-manual.tex  macros.sty  manual.bib
minils/: _tags  minils.ml  minils_printer.ml
minils/analysis/: clocking.ml  init.ml
minils/main/: mls2seq.ml  mls_compiler.ml  mlsc.ml
minils/sequential/: c.ml  cgen.ml  control.ml  csubst.ml  java.ml  mls2obc.ml  obc.ml
minils/transformations/: callgraph.ml  clocking.ml  init.ml  normalize.ml  schedule.ml
presentations/2011_Synchron_LGerard_LHO/: decade.sty  synchron11.tex
test/: .gitignore  CTestTestfile.cmake  check  gen_ctests  high2.ept  tt.ept
test/async/: convolutions.ept  convolutions_a.ept  fork_join.ept  fork_join_a.ept  fork_join_a_delay.ept  java_all  java_m  kill.ept  kill_node.ept  knock_control.ept  lent.ept  moyen_lent_rapide.ept  moyen_lent_rapide_a.ept  pipline.ept  pipline_a.ept  pipline_b.ept  rapide_lent.ept  rapide_lent_a.ept  rapide_lent_a2.ept  reset.ept  reset_6.ept  reset_6_a.ept  reset_a.ept  t.ept  temporal_fork_join_a.ept  timer.ept  tt.ept
test/bad/: bad_flatten.ept  clock_annot2.ept  clock_annot3.ept  oversample.ept  oversample2.ept  t11-initialization.ept  t2.ept  t3.ept  t4.ept  t5.ept  when_merge1.ept
test/good/: alloc.ept  array1.ept  array2.ept  array_fill.ept  array_iterators.ept  array_iterators2.ept  array_power.ept  auto.ept  autohiera.ept  autohiera2.ept  bad_updown.ept  bug_sampled_when.ept  ckannot.ept  clock_causality.ept  clocks.ept  counter.ept  current.ept  fbyfby2.ept  flatten.ept  foldi.ept  format.ept  hierarchie.ept  high.ept  high2.ept  image_filters.ept  itfusion.ept  linear.ept  linear_automata.ept  linear_init.ept  linear_split.ept  linear_vars.ept  memalloc_clocks.ept  memalloc_record.ept  memalloc_simple.ept  norm.ept  nsync.ept  or_keep.ept  oversample.ept  oversample2.ept  oversample3.ept  (+41 more)
test/image_filters/: convolutions.ept  downscale.ept  downscale_async_external_clocks_2.ept  downscale_async_wrong_1.ept  pip.ept
test/oversampling/: base0.ept  lucy.ls  lucy_incorrect.ls
test/scripts/: compile_fail  compile_gcc_run  compile_only  compile_sdc_run  config  test_option
test/sdc/: lnum_simple.ept  modular.ept  tracking.ept
tools/: debugger_script  decades.vim  enforce_style.sh  hec-c.sh  hec-vhdl.sh  hept-mode.el  heptc-c.sh
tools/git-hooks/: pre-commit
utilities/: dep.ml  graph.ml  misc.ml  misc.mli  pp_tools.ml
utilities/global/: dep.ml
web/: bib.php  header.php  index.php  publications.html  publications_bib.html  publis.bib  rsyncweb  toc.php
(+138 files in other folders)
